Update licensing documents

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,7 +270,7 @@ endmacro()
 function(check_private_headers_exist module)
   message(STATUS "Checking whether private include directories for module ${module} exist")
   # backward compatibility with Qt < 5.9
-  if (TARGET Qt5::${module}Private)
+  if(TARGET Qt5::${module}Private)
     get_target_property(private_includes Qt5::${module}Private INTERFACE_INCLUDE_DIRECTORIES)
     set(Qt5${module}_PRIVATE_INCLUDE_DIRS "${private_includes}" PARENT_SCOPE)
   endif()
@@ -448,21 +448,21 @@ check_private_header_exists(Core "private/qobject_p.h")
 check_private_headers_exist(Gui)
 list(APPEND Qt5Gui_PRIVATE_INCLUDE_DIRS ${Qt5Core_PRIVATE_INCLUDE_DIRS})
 if(Qt5Widgets_FOUND)
-    check_private_headers_exist(Widgets)
-    list(APPEND Qt5Widgets_PRIVATE_INCLUDE_DIRS ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
+  check_private_headers_exist(Widgets)
+  list(APPEND Qt5Widgets_PRIVATE_INCLUDE_DIRS ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
 endif()
 if(Qt5Qml_FOUND)
-    check_private_headers_exist(Qml)
-    check_private_header_exists(Qml "private/qqmlabstractbinding_p.h")
-    list(APPEND Qt5Qml_PRIVATE_INCLUDE_DIRS ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
+  check_private_headers_exist(Qml)
+  check_private_header_exists(Qml "private/qqmlabstractbinding_p.h")
+  list(APPEND Qt5Qml_PRIVATE_INCLUDE_DIRS ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
 endif()
 if(Qt5Quick_FOUND)
-    check_private_headers_exist(Quick)
-    check_private_header_exists(Quick "private/qquickitem_p.h")
-    list(APPEND Qt5Quick_PRIVATE_INCLUDE_DIRS ${Qt5Qml_PRIVATE_INCLUDE_DIRS})
+  check_private_headers_exist(Quick)
+  check_private_header_exists(Quick "private/qquickitem_p.h")
+  list(APPEND Qt5Quick_PRIVATE_INCLUDE_DIRS ${Qt5Qml_PRIVATE_INCLUDE_DIRS})
 endif()
 if(Qt5Scxml_FOUND)
-    check_private_headers_exist(Scxml)
+  check_private_headers_exist(Scxml)
 endif()
 
 set(HAVE_QT_CONCURRENT ${Qt5Concurrent_FOUND})
@@ -497,7 +497,6 @@ set_package_properties(Qt5Widget PROPERTIES TYPE RECOMMENDED PURPOSE "Required f
 set_package_properties(Qt5Svg PROPERTIES TYPE OPTIONAL PURPOSE "Required for widget SVG export.")
 set_package_properties(Qt5PrintSupport PROPERTIES TYPE OPTIONAL PURPOSE "Required for widget PDF export.")
 
-
 # debug suffixes for qmake compatibility
 if(WIN32)
   set(CMAKE_DEBUG_POSTFIX "d")
@@ -517,7 +516,7 @@ add_definitions(
   -DQT_NO_CAST_TO_ASCII
   -DQT_NO_URL_CAST_FROM_STRING
 )
-if (NOT WIN32)
+if(NOT WIN32)
   # BIC on MSVC at least (see e.g. https://bugreports.qt.io/browse/AUTOSUITE-946)
   add_definitions(-DQT_STRICT_ITERATORS)
 endif()
@@ -625,7 +624,7 @@ else()
   if(GAMMARAY_INSTALL_QT_LAYOUT)
     set(LIB_INSTALL_DIR "lib") # Qt always uses "lib"
   else()
-    set(LIB_INSTALL_DIR  "${CMAKE_INSTALL_LIBDIR}") # "lib" or "lib64"
+    set(LIB_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}") # "lib" or "lib64"
     gammaray_convert_to_relative_path(LIB_INSTALL_DIR)
   endif()
   set(INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_INCLUDEDIR}/gammaray")
@@ -746,7 +745,7 @@ endif()
 
 set(LICENSE_FILE "LICENSE.GPL.txt")
 set(README_FILE "ReadMe.txt")
-list(APPEND DOCS ${LICENSE_FILE} ${README_FILE} "LICENSE.txt" "LICENSE.US.txt" "ReadMe-commercial.txt")
+list(APPEND DOCS ${LICENSE_FILE} ${README_FILE} "LICENSE.txt")
 if(NOT APPLE AND NOT GAMMARAY_PROBE_ONLY_BUILD)
   if(UNIX AND GAMMARAY_BUILD_UI)
     install(FILES GammaRay.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
