appveyor.ini, appveyor.yml - fixing

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -18,7 +18,7 @@ APPVEYOR_BUILD_FOLDER = ${Variables:Root}
 # Settings are Category/key=value
 # Category is case sensitive
 [GeneralSettings]
-Paths/Python = C:\Python36
+Paths/Python = C:\Python37-x64
 Paths/Python27 = C:\Python27
 Paths/Msys = ${Variables:Msys}
 Paths/DownloadDir = ${Variables:Root}/downloads
@@ -34,7 +34,7 @@ ContinuousIntegration/RepositoryUrl = http://downloads.kdab.com/ci/cache/gammara
 ContinuousIntegration/Enabled=True
 ContinuousIntegration/UpdateRepository = True
 Compile/BuildType = Release
-QtSDK/Version=5.13.1
+QtSDK/Version=5.12.4
 QtSDK/Path=C:\Qt
 QtSDK/Enabled=True
 Blueprints/BlueprintRoot = ${Variables:Root}/blueprints
@@ -65,13 +65,21 @@ Packager/PackageType = SevenZipPackager
 QtSDK/Compiler = msvc2015
 General/ABI = windows-msvc2015_32-cl
 
+[windows-msvc2017_32-cl-BlueprintSettings]
+qt-apps/gammaray.gammarayProbeOnly = True
+
+[windows-msvc2017_32-cl]
+Packager/PackageType = SevenZipPackager
+QtSDK/Compiler = msvc2017
+General/ABI = windows-msvc2017_32-cl
+
 [windows-mingw_32-gcc-BlueprintSettings]
 qt-apps/gammaray.gammarayProbeOnly = True
 qt-apps/gammaray.disableGammarayBuildCliInjector = True
 
 [windows-mingw_32-gcc]
 Packager/PackageType = SevenZipPackager
-QtSDK/Compiler = mingw53_32
+QtSDK/Compiler = mingw73_32
 General/ABI = windows-mingw_32-gcc
 
 [windows-msvc2017_64-cl]
