quickinspector/CMakeLists.txt - Android: explictly link to GLESv2
also clean-up the coding style and indentation

the Qt5::Gui_GLESv2 CMake target is not set for Android
for unknown reasons.

--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -13,54 +13,57 @@ if(Qt5Quick_FOUND)
   set_target_properties(gammaray_quickinspector_shared PROPERTIES POSITION_INDEPENDENT_CODE ON)
   target_compile_features(gammaray_quickinspector_shared PUBLIC ${GAMMARAY_REQUIRED_CXX_FEATURES})
 
-  if (NOT GAMMARAY_CLIENT_ONLY_BUILD)
-  set(gammaray_quickinspector_srcs
-    quickinspector.cpp
+  if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
+    set(gammaray_quickinspector_srcs
+      quickinspector.cpp
 
-    quickanchorspropertyadaptor.cpp
-    quickitemmodel.cpp
-    quickscenegraphmodel.cpp
-    quickpaintanalyzerextension.cpp
-    quickscreengrabber.cpp
-  )
+      quickanchorspropertyadaptor.cpp
+      quickitemmodel.cpp
+      quickscenegraphmodel.cpp
+      quickpaintanalyzerextension.cpp
+      quickscreengrabber.cpp
+    )
 
-  if(NOT QT_NO_OPENGL)
-    list(APPEND gammaray_quickinspector_srcs
-      materialextension/materialextension.cpp
-      materialextension/materialshadermodel.cpp
-      materialextension/qquickopenglshadereffectmaterialadaptor.cpp
-      geometryextension/sggeometryextension.cpp
-      geometryextension/sggeometrymodel.cpp
-      textureextension/textureextension.cpp
-      textureextension/qsgtexturegrabber.cpp
+    if(NOT QT_NO_OPENGL)
+      list(APPEND gammaray_quickinspector_srcs
+        materialextension/materialextension.cpp
+        materialextension/materialshadermodel.cpp
+        materialextension/qquickopenglshadereffectmaterialadaptor.cpp
+        geometryextension/sggeometryextension.cpp
+        geometryextension/sggeometrymodel.cpp
+        textureextension/textureextension.cpp
+        textureextension/qsgtexturegrabber.cpp)
+    endif()
+
+    gammaray_add_plugin(gammaray_quickinspector
+      JSON gammaray_quickinspector.json
+      SOURCES ${gammaray_quickinspector_srcs}
+    )
+
+    if(NOT Qt5Quick_VERSION VERSION_LESS 5.7)
+      target_sources(gammaray_quickinspector PUBLIC quickimplicitbindingdependencyprovider.cpp)
+    endif()
+
+    target_include_directories(gammaray_quickinspector SYSTEM PRIVATE ${Qt5Quick_PRIVATE_INCLUDE_DIRS})
+    target_link_libraries(gammaray_quickinspector
+      gammaray_quickinspector_shared
+      gammaray_core Qt5::Quick
+      gammaray_kitemmodels
     )
   endif()
 
-  gammaray_add_plugin(gammaray_quickinspector
-    JSON gammaray_quickinspector.json
-    SOURCES ${gammaray_quickinspector_srcs}
-  )
-
-  if(NOT Qt5Quick_VERSION VERSION_LESS 5.7)
-    target_sources(gammaray_quickinspector PUBLIC quickimplicitbindingdependencyprovider.cpp)
+  if(TARGET Qt5::Gui_GLESv2)
+    include(CheckCXXSourceCompiles)
+    set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES} Qt5::Gui_GLESv2)
+    check_cxx_source_compiles("int main() {return 0;}" CAN_LINK_GUI_GLESV2)
+    if(CAN_LINK_GUI_GLESV2)
+      set(HAVE_GLESv2 TRUE)
+      target_link_libraries(gammaray_quickinspector Qt5::Gui_GLESv2)
+    endif()
   endif()
-
-  target_include_directories(gammaray_quickinspector SYSTEM PRIVATE ${Qt5Quick_PRIVATE_INCLUDE_DIRS})
-  target_link_libraries(gammaray_quickinspector
-    gammaray_quickinspector_shared
-    gammaray_core Qt5::Quick
-    gammaray_kitemmodels
-  )
-  endif()
-
-  if (TARGET Qt5::Gui_GLESv2)
-       include(CheckCXXSourceCompiles)
-       set (CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES} Qt5::Gui_GLESv2)
-       CHECK_CXX_SOURCE_COMPILES("int main() {return 0;}" CAN_LINK_GUI_GLESV2)
-       if (CAN_LINK_GUI_GLESV2)
-           set(HAVE_GLESv2 TRUE)
-           target_link_libraries(gammaray_quickinspector Qt5::Gui_GLESv2)
-       endif ()
+  #the Qt5::Gui_GLESv2 target is not set on Android (up to qt5.13, at least)
+  if(ANDROID AND NOT TARGET Qt5::Gui_GLESv2)
+    target_link_libraries(gammaray_quickinspector GLESv2)
   endif()
 
   if(GAMMARAY_BUILD_UI)
@@ -83,7 +86,7 @@ if(Qt5Quick_FOUND)
       textureextension/resources.qrc
     )
 
-    if (NOT QT_NO_OPENGL)
+    if(NOT QT_NO_OPENGL)
       list(APPEND gammaray_quickinspector_ui_srcs
         geometryextension/sggeometrytab.cpp
         geometryextension/sgwireframewidget.cpp
