various - use https urls, where available

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -29,8 +29,8 @@ Packager/Destination =${Variables:APPVEYOR_BUILD_FOLDER}/binaries
 Packager/UseCache = ${Variables:UseCache}
 Packager/CreateCache = ${Variables:CreateCache}
 Packager/CacheDir = ${Variables:APPVEYOR_BUILD_FOLDER}/cache
-Packager/RepositoryUrl = http://downloads.kdab.com/ci/cache/gammaray/cache
-ContinuousIntegration/RepositoryUrl = http://downloads.kdab.com/ci/cache/gammaray/binaries
+Packager/RepositoryUrl = https://downloads.kdab.com/ci/cache/gammaray/cache
+ContinuousIntegration/RepositoryUrl = https://downloads.kdab.com/ci/cache/gammaray/binaries
 ContinuousIntegration/Enabled=True
 ContinuousIntegration/UpdateRepository = True
 Compile/BuildType = Release
