Fix plugin loading and deployment on Android with Qt 5.14

--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -67,7 +67,11 @@ else()
     install(TARGETS gammaray_probe ${INSTALL_TARGETS_DEFAULT_ARGS})
   endif()
   if (ANDROID)
-    install(FILES gammaray_probe-android-dependencies.xml RENAME gammaray_probe-${GAMMARAY_PROBE_ABI}-android-dependencies.xml DESTINATION ${LIB_INSTALL_DIR})
+    if (Qt5Core_VERSION VERSION_LESS 5.14.0)
+      install(FILES gammaray_probe-android-dependencies.xml RENAME gammaray_probe-${GAMMARAY_PROBE_ABI}-android-dependencies.xml DESTINATION ${LIB_INSTALL_DIR})
+    else()
+      install(FILES gammaray_probe-android-dependencies.xml RENAME gammaray_probe-${GAMMARAY_PROBE_ABI}_${ANDROID_ABI}-android-dependencies.xml DESTINATION ${LIB_INSTALL_DIR})
+    endif()
   endif()
 endif()
 
