--- a/plugins/objectvisualizer/CMakeLists.txt
+++ b/plugins/objectvisualizer/CMakeLists.txt
@@ -16,14 +16,20 @@ target_link_libraries(gammaray_objectvisualizer_plugin
 
 ######## START VTK VISUALIZATION
 
-#VTK discovery works a lot better if you give CMake a hint using the VTK_DIR variable
-find_path(VTK_DIR VTKConfig.cmake
-  /usr/lib64/vtk /usr/lib/vtk /usr/local/lib64/vtk /usr/local/lib/vtk
-)
-set(VTK_LIBS vtkGUISupportQt
-  vtkViewsInfovis # vtkGraphLayoutView & friends
-)
-find_package(VTK 7.1 COMPONENTS ${VTK_LIBS} CONFIG)
+if(CMAKE_VERSION VERSION_LESS "3.1")
+  #VTK discovery works a lot better if you give CMake a hint using the VTK_DIR variable
+  find_path(VTK_DIR VTKConfig.cmake
+    /usr/lib64/vtk /usr/lib/vtk /usr/local/lib64/vtk /usr/local/lib/vtk
+  )
+  set(VTK_LIBRARIES vtkGUISupportQt
+    vtkRenderingFreeType
+    vtkInfovisLayout
+    vtkViewsInfovis # vtkGraphLayoutView & friends
+  )
+  find_package(VTK 7.1 COMPONENTS ${VTK_LIBRARIES} CONFIG)
+else()
+  find_package(VTK)
+endif()
 set_package_properties(VTK PROPERTIES
   TYPE OPTIONAL
   DESCRIPTION "Visualization Toolkit"
@@ -60,7 +66,7 @@ if(VTK_FOUND AND VTK_QT_VERSION EQUAL 5 AND GAMMARAY_BUILD_UI)
   )
   target_include_directories(gammaray_objectvisualizer_ui_plugin SYSTEM PUBLIC ${VTK_INCLUDE_DIRS})
   target_link_libraries(gammaray_objectvisualizer_ui_plugin
-    ${VTK_LIBS}
+    ${VTK_LIBRARIES}
     gammaray_common
     gammaray_ui
   )
