Always export the probe library as a CMake target
This was previously only done when using the Qt install layout.

--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -41,7 +41,7 @@ endif()
 if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
   set_target_properties(gammaray_probe PROPERTIES PREFIX "")
   gammaray_set_rpath(gammaray_probe ${PROBE_INSTALL_DIR})
-  install(TARGETS gammaray_probe DESTINATION ${PROBE_INSTALL_DIR})
+  install(TARGETS gammaray_probe EXPORT GammaRayTargets DESTINATION ${PROBE_INSTALL_DIR})
   if(WIN32)
     set_target_properties(gammaray_winloader PROPERTIES PREFIX "")
     install(TARGETS gammaray_winloader DESTINATION ${PROBE_INSTALL_DIR})
