cmake: Avoid CMP0076 policy warning
```
CMake Warning (dev) at plugins/quickinspector/CMakeLists.txt:44 (target_sources):
  Policy CMP0076 is not set: target_sources() command converts relative paths
  to absolute.  Run "cmake --help-policy CMP0076" for policy details.  Use
  the cmake_policy command to set the policy and suppress this warning.
```

--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -41,7 +41,7 @@ if(Qt5Quick_FOUND)
     )
 
     if(NOT Qt5Quick_VERSION VERSION_LESS 5.7)
-      target_sources(gammaray_quickinspector PUBLIC quickimplicitbindingdependencyprovider.cpp)
+      target_sources(gammaray_quickinspector PUBLIC ${CMAKE_CURRENT_LIST_DIR}/quickimplicitbindingdependencyprovider.cpp)
     endif()
 
     target_include_directories(gammaray_quickinspector SYSTEM PRIVATE ${Qt5Quick_PRIVATE_INCLUDE_DIRS})
