--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -383,7 +383,8 @@ find_package(Qt${Qt_VERSION_MAJOR} NO_MODULE QUIET OPTIONAL_COMPONENTS
 )
 if(TARGET Qt6::Core)
   set(CMAKE_CXX_STANDARD 17)
-endif()
+  add_definitions(-DGAMMARAY_QT6_TODO)
+endif ()
 
 # Find these 'exotic' Qt modules without using find_package(... COMPONENTS)
 # so we can retrieve those packages even when installed into a different prefix
