--- a/launcher/core/injector/CMakeLists.txt
+++ b/launcher/core/injector/CMakeLists.txt
@@ -3,10 +3,11 @@ if(Qt5Widgets_FOUND)
 
   add_library(gammaray_injector_style MODULE ${gammaray_injector_style_srcs})
 
-  target_include_directories(gammaray_injector_style SYSTEM PRIVATE ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
   target_link_libraries(gammaray_injector_style
     Qt5::Core
-    Qt5::Gui Qt5::Widgets
+    Qt5::Gui
+    Qt5::Widgets
+    Qt5::GuiPrivate
   )
 
   set_target_properties(gammaray_injector_style
