--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -15,7 +15,7 @@ target_include_directories(gammaray_probe_obj PUBLIC
     $<TARGET_PROPERTY:gammaray_core,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:gammaray_common,INTERFACE_INCLUDE_DIRECTORIES>
 )
-target_include_directories(gammaray_probe_obj SYSTEM PRIVATE ${Qt5Core_PRIVATE_INCLUDE_DIRS})
+target_link_libraries(gammaray_probe_obj Qt5::CorePrivate)
 
 # probe lib
 # DYLD_INSERT_LIBRARIES only works with real shared libraries, not modules
