--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -267,41 +267,6 @@ macro(add_flag_if_supported flag name)
   append_if("CXX_SUPPORTS_${name}" "${flag}" CMAKE_CXX_FLAGS)
 endmacro()
 
-function(check_private_headers_exist module)
-  message(STATUS "Checking whether private include directories for module ${module} exist")
-  # backward compatibility with Qt < 5.9
-  if(TARGET Qt5::${module}Private)
-    get_target_property(private_includes Qt5::${module}Private INTERFACE_INCLUDE_DIRECTORIES)
-    set(Qt5${module}_PRIVATE_INCLUDE_DIRS "${private_includes}" PARENT_SCOPE)
-  endif()
-
-  # HACK to work around broken Qt cmake configurations in older Qt version (up to 5.7 at least)
-  if(NOT "${Qt5${module}_PRIVATE_INCLUDE_DIRS}" MATCHES "/Qt${module}/")
-    string(REPLACE "/QtCore" "/Qt${module}" replaceme "${Qt5Core_PRIVATE_INCLUDE_DIRS}")
-    list(APPEND Qt5${module}_PRIVATE_INCLUDE_DIRS ${replaceme})
-    list(REMOVE_DUPLICATES Qt5${module}_PRIVATE_INCLUDE_DIRS)
-    set(Qt5${module}_PRIVATE_INCLUDE_DIRS ${Qt5${module}_PRIVATE_INCLUDE_DIRS} PARENT_SCOPE)
-  endif()
-
-  foreach(dir ${Qt5${module}_PRIVATE_INCLUDE_DIRS})
-    if(NOT EXISTS "${dir}")
-      message(FATAL_ERROR "The private include directory ${dir} for module ${module} do not exist! Please make sure your Qt5 installation contains private headers.\nThe required directories:\n  ${Qt5${module}_PRIVATE_INCLUDE_DIRS}")
-    endif()
-  endforeach()
-endfunction()
-
-function(check_private_header_exists module file)
-  set(found FALSE)
-  foreach(dir ${Qt5${module}_PRIVATE_INCLUDE_DIRS})
-    if(EXISTS "${dir}/${file}")
-      set(found TRUE)
-    endif()
-  endforeach()
-  if(NOT found)
-    message(FATAL_ERROR "The private include file ${file} was not found in directory ${Qt5${module}_PRIVATE_INCLUDE_DIRS}! Please make sure your Qt5 installation contains private headers.")
-  endif()
-endfunction()
-
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN ON)
 
@@ -431,6 +396,7 @@ find_package(Qt5IviCore 1.1 NO_MODULE QUIET) # 1.1 is based on 5.8
 find_package(Qt5IviVehicleFunctions 1.1 NO_MODULE QUIET)
 find_package(Qt5IviMedia 1.1 NO_MODULE QUIET)
 find_package(Qt5Scxml 5.8 NO_MODULE QUIET)
+include (Qt5LegacySupport)
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND Qt5Core_VERSION VERSION_EQUAL 5.9.1)
   # hide -Wc++1z-extensions warnings in this Qt version -- see: https://bugreports.qt.io/browse/QTBUG-61840
@@ -458,29 +424,6 @@ if(GAMMARAY_BUILD_UI) # widgets are required for the UI
       message(STATUS "Not building GammaRay Widget 3D")
     endif()
   endif()
-endif()
-
-# Sanity checking, we need private includes for the following modules, and < Qt 5.9 backward compatibility
-check_private_headers_exist(Core)
-check_private_header_exists(Core "private/qobject_p.h")
-check_private_headers_exist(Gui)
-list(APPEND Qt5Gui_PRIVATE_INCLUDE_DIRS ${Qt5Core_PRIVATE_INCLUDE_DIRS})
-if(Qt5Widgets_FOUND)
-  check_private_headers_exist(Widgets)
-  list(APPEND Qt5Widgets_PRIVATE_INCLUDE_DIRS ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
-endif()
-if(Qt5Qml_FOUND)
-  check_private_headers_exist(Qml)
-  check_private_header_exists(Qml "private/qqmlabstractbinding_p.h")
-  list(APPEND Qt5Qml_PRIVATE_INCLUDE_DIRS ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
-endif()
-if(Qt5Quick_FOUND)
-  check_private_headers_exist(Quick)
-  check_private_header_exists(Quick "private/qquickitem_p.h")
-  list(APPEND Qt5Quick_PRIVATE_INCLUDE_DIRS ${Qt5Qml_PRIVATE_INCLUDE_DIRS})
-endif()
-if(Qt5Scxml_FOUND)
-  check_private_headers_exist(Scxml)
 endif()
 
 set(HAVE_QT_CONCURRENT ${Qt5Concurrent_FOUND})
