--- a/plugins/eventmonitor/CMakeLists.txt
+++ b/plugins/eventmonitor/CMakeLists.txt
@@ -14,9 +14,9 @@ gammaray_add_plugin(gammaray_eventmonitor_plugin
   SOURCES ${gammaray_eventmonitor_plugin_srcs}
 )
 
-target_include_directories(gammaray_eventmonitor_plugin SYSTEM PRIVATE ${Qt5Core_PRIVATE_INCLUDE_DIRS})
 target_link_libraries(gammaray_eventmonitor_plugin
   Qt5::Gui
+  Qt5::CorePrivate
   gammaray_core
 )
 endif()
