--- a/plugins/qmlsupport/CMakeLists.txt
+++ b/plugins/qmlsupport/CMakeLists.txt
@@ -12,8 +12,11 @@ set(gammaray_qmlsupport_srcs
 )
 
 gammaray_add_plugin(gammaray_qmlsupport JSON gammaray_qmlsupport.json SOURCES ${gammaray_qmlsupport_srcs})
-target_include_directories(gammaray_qmlsupport SYSTEM PRIVATE ${Qt5Qml_PRIVATE_INCLUDE_DIRS})
-target_link_libraries(gammaray_qmlsupport gammaray_core Qt5::Qml)
+target_link_libraries(gammaray_qmlsupport
+    gammaray_core
+    Qt5::Qml
+    Qt5::QmlPrivate
+)
 endif()
 
 
