--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -44,10 +44,11 @@ if(Qt5Quick_FOUND)
       target_sources(gammaray_quickinspector PUBLIC ${CMAKE_CURRENT_LIST_DIR}/quickimplicitbindingdependencyprovider.cpp)
     endif()
 
-    target_include_directories(gammaray_quickinspector SYSTEM PRIVATE ${Qt5Quick_PRIVATE_INCLUDE_DIRS})
     target_link_libraries(gammaray_quickinspector
       gammaray_quickinspector_shared
-      gammaray_core Qt5::Quick
+      gammaray_core
+      Qt5::Quick
+      Qt5::QuickPrivate
       gammaray_kitemmodels
     )
   endif()
