--- a/plugins/statemachineviewer/CMakeLists.txt
+++ b/plugins/statemachineviewer/CMakeLists.txt
@@ -29,8 +29,7 @@ target_link_libraries(gammaray_statemachineviewer_plugin
 )
 
 if(Qt5Scxml_FOUND)
-  target_link_libraries(gammaray_statemachineviewer_plugin Qt5::Scxml)
-  target_include_directories(gammaray_statemachineviewer_plugin SYSTEM PRIVATE ${Qt5Scxml_PRIVATE_INCLUDE_DIRS})
+  target_link_libraries(gammaray_statemachineviewer_plugin Qt5::Scxml Qt5::ScxmlPrivate)
 endif()
 endif()
 
